# sap-ewa-analyzer

./: .gitignore  6-phase-implementation  BIP_09_Nov_25_AI.md  BTP_MIGRATION_PLAN_V2.md  BTP_URL  FIORI_MIGRATION_PLAN.md  KPI_TREND_TRACKING_IMPLEMENTATION_SUMMARY.md  METADATA_BASED_KPI_TRACKING.md  Makefile_20260310131449.mta  VISUAL_REFRESH_CHECKLIST.txt  backend.logs  btp-change-env  btp_logon.txt  docker-compose.yml  ewa-backend.log1  idea  mta.yaml  package-lock.json  prompt  test_export_logic.py  test_kpi_trends.py  test_strip.py  xs-security.json
backend/: .env.example  .gitignore  CHAPTER_WORKFLOW.md  Dockerfile  Procfile  azure_document_intelligence_service.py  azure_openai_service.py  doc_extractor.py  document_converter.py  docx_markdown_converter.py  ewa_main legacy.py  ewa_main.py  langgraph_workflows.py  main.py  manifest.yaml  pdf_markdown_converter.py  pyproject.toml  requirements.txt  test_gemini_integration.py  test_image_extraction.py  workflow_orchestrator.py
backend/agent/: analysis_agent.py  anthropic_ewa_agent.py  chapter_extraction_agent.py  deep_thinker_agent.py  document_structure_agent.py  ewa_agent.py  extraction_agent.py  kpi_image_agent.py  map_reduce_agent.py  openai_ewa_agent.py  parameter_extraction_agent.py  specialist_agents.py  strategy_agent.py
backend/batch/: batch_registry.py  openai_batch_client.py  poller.py
backend/converters/: __init__.py  doc_extractor.py  doc_markdown_converter.py  document_converter.py  docx_markdown_converter.py  html_markdown_converter.py  pdf_markdown_converter.py
backend/core/: __init__.py  (+5 more)
(+216 files in other folders)
