[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-documentintelligence>=1.0.2",
    "azure-storage-blob>=12.25.1",
    "docx2txt>=0.9",
    "fastapi>=0.115.12",
    "jsonschema>=4.24.0",
    "openai>=1.82.0",
    "pymupdf4llm>=0.0.24",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]
